# breakout_2d

./: .clang-format  .clangd  .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  breakout_2d.slnx  gitlab-ci.yml  todo.md
.github/workflows/: cmake-single-platform.yml
breakout_2d/: breakout_2d.vcxproj  breakout_2d.vcxproj.filters
breakout_2d/include/: ball.hpp  brick.hpp  brick_data.hpp  brick_type.hpp  collision_detection.hpp  event_dispatcher.hpp  event_type.hpp  game.hpp  game_level.hpp  game_object.hpp  particle.hpp  particle_emitter.hpp  pch.hpp  player.hpp  render_config.hpp  shader.hpp  shader_manager.hpp  shader_observer.hpp  texture_2d.hpp  window.hpp
breakout_2d/src/: ball.cpp  brick.cpp  event_dispatcher.cpp  game.cpp  game_level.cpp  game_object.cpp  glad.c  main.cpp  particle_emitter.cpp  path_manager.cpp  player.cpp  shader.cpp  shader_manager.cpp  shader_observer.cpp  sprite_rendered.cpp  text_renderer.cpp  texture_2d.cpp  texture_manager.cpp  window.cpp
game/: CMakeLists.txt
game/include/: aabb.hpp  app.hpp  audio_events.hpp  audio_manager.hpp  background.hpp  ball.hpp  brick.hpp  brick_data.hpp  brick_type.hpp  canvas.hpp  collision_detection.hpp  collision_type.hpp  console_input.hpp  custom_attributes.hpp  easing_functions.hpp  engine_context.hpp  event_dispatcher.hpp  event_type.hpp  fast_random.hpp  fps_counter.hpp  game.hpp  game_core.hpp  game_level.hpp  game_level_generator.hpp  game_modifiers.hpp  game_object.hpp  game_renderer.hpp  game_scene.hpp  glm_stringify.hpp  input.hpp  logging.hpp  object_2d.hpp  object_manager.hpp  observer_ptr.hpp  particle.hpp  particle_emitter.hpp  path_manager.hpp  player.hpp  powerup.hpp  powerup_data.hpp  (+23 more)
game/include/interfaces/: scene_node_interface.hpp
game/src/: app.cpp  audio_manager.cpp  background.cpp  ball.cpp  brick.cpp  canvas.cpp  engine_context.cpp  event_dispatcher.cpp  fps_counter.cpp  game.cpp  game_core.cpp  game_level.cpp  game_level_generator.cpp  game_object.cpp  game_renderer.cpp  game_scene.cpp  object_2d.cpp  object_manager.cpp  particle_emitter.cpp  path_manager.cpp  player.cpp  powerup.cpp  powerup_factory.cpp  program.cpp  render_queue.cpp  shader.cpp  shader_manager.cpp  shader_observer.cpp  sprite_object.cpp  sprite_renderer.cpp  task.cpp  text_renderer.cpp  texture_2d.cpp  texture_manager.cpp  tween.cpp  window.cpp
glad/: CMakeLists.txt
glad/include/glad/: glad.h
resources/fmod/master/: master.bank  master.strings.bank
resources/fonts/msdf/home_video/: atlas.json
resources/fonts/msdf/roboto/: atlas.json
resources/levels/: 1.lvl  2.lvl  3.lvl  4.lvl
resources/shaders/fs/: canvas.glsl  particle.fs  particle.glsl  sprite.glsl  text.fs  textMSDF.glsl
resources/shaders/vs/: canvas.glsl  particle.glsl  particle.vs  sprite.glsl  sprite.vs  text.vs
toolchains/: clang-cl.cmake  clang.cmake  clang64.cmake  gcc.cmake  ucrt64.cmake
